test_regress/t/t_trace_dumpvars_missing3.out
%Error: t/t_trace_dumpvars.v:264:5: $dumpvars target not found: t.missing
  264 |     $dumpvars(0, t.missing);
      |     ^~~~~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
